--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ars</title>
+    
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- ✅ Google AdSense Verification Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5333095933532737"
+      crossorigin="anonymous"></script>
+
+    <!-- ✅ Optional: Google Site Verification Meta Tag -->
+    <!-- Replace content value with your actual token from Google -->
+    <meta name="google-site-verification" content="your-verification-code-here" />
+
+    <title>Ars Kreedashala</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Main Vite entry point -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
